unpackaged/main/default/objects/Auto_Assign_Settings__c/Auto_Assign_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains all the settings for Round Robin auto assignment. Used in Internet Auto Assign flows.</description>
    <label>Auto Assign Settings</label>
</CustomObject>