unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Auto_Assign_Counter_BLA_T2__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Counter_BLA_T2__c</fullName>
    <description>Business Loan Analyst</description>
    <label>Auto Assign Counter - BLA T2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>