unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Auto_Assign_Counter_Mailer__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Counter_Mailer__c</fullName>
    <description>Round Robin Auto Assign Counter - Internet Mailer Leads/Accounts.</description>
    <inlineHelpText>Counter for Internet Mailer Team. Will increment by 1 for each lead that is assigned to Internet Mailer Team. When it reaches the maximum number of reps on the team it will restart at 1.</inlineHelpText>
    <label>Auto Assign Counter - Mailer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>