unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Auto_Assign_Counter_Mailer_Sr_Team__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Counter_Mailer_Sr_Team__c</fullName>
    <label>Auto Assign Counter - Mailer - Top</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>