unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Auto_Assign_Counter_PPC__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Counter_PPC__c</fullName>
    <description>Round Robin Auto Assign Counter - PPC Leads.</description>
    <label>Auto Assign Counter - PPC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>