unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Sr_Team_AA_Date_Mailer__c.field-meta.xml
<CustomField>
    <fullName>Sr_Team_AA_Date_Mailer__c</fullName>
    <description>Date used for Round Robin flow. Auto-Updates.</description>
    <inlineHelpText>Updated by Internet Auto Assign flow. Once the maximum number of records for the Sr. team has been reached for the day the date will be updated to today's date.</inlineHelpText>
    <label>Sr Team - AA Date - Mailer</label>
    <type>Date</type>
</CustomField>