unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Sr_Team_Max_Reached_Today_PPC__c.field-meta.xml
<CustomField>
    <fullName>Sr_Team_Max_Reached_Today_PPC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Updated by flow. Reflects the number of records each rep on the Sr team should have received from the Internet Mailer Distribution. Resets back to 0 after required number of records has been reached.</description>
    <label>Sr Team - # Records Today - PPC</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>