unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Sr_Team_Max_Records_Mailer__c.field-meta.xml
<CustomField>
    <fullName>Sr_Team_Max_Records_Mailer__c</fullName>
    <description>The maximum number of records that should be assigned to each rep on the Sr. Team each day from the Internet Mailer distribution.</description>
    <inlineHelpText>The maximum number of records that should be assigned to each rep on the Sr. Team each day from the Internet Mailer distribution.</inlineHelpText>
    <label>Sr Team - Max Records - Mailer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>