unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Sr_Team_Max_Records_PPC__c.field-meta.xml
<CustomField>
    <fullName>Sr_Team_Max_Records_PPC__c</fullName>
    <label>Sr Team - Max Records - PPC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>