unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/Strategic_Partner_Counter__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Partner_Counter__c</fullName>
    <label>Strategic Partner Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>