unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/T1_Buyerzone_Limit__c.field-meta.xml
<CustomField>
    <fullName>T1_Buyerzone_Limit__c</fullName>
    <label>T1 Buyerzone Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>