unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/T1_Strategic_Partner_Limit__c.field-meta.xml
<CustomField>
    <fullName>T1_Strategic_Partner_Limit__c</fullName>
    <label>T1 Strategic Partner Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>