unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/T2_BLA_Limit__c.field-meta.xml
<CustomField>
    <fullName>T2_BLA_Limit__c</fullName>
    <description>Business Loan Analyst</description>
    <label>T2 BLA Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>