unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/T2_Fundera_Limit__c.field-meta.xml
<CustomField>
    <fullName>T2_Fundera_Limit__c</fullName>
    <label>T2 Fundera Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>