unpackaged/main/default/objects/Auto_Assign_Settings__c/fields/T2_Lending_Tree_Limit__c.field-meta.xml
<CustomField>
    <fullName>T2_Lending_Tree_Limit__c</fullName>
    <label>T2 Lending Tree Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>